<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.pcmanus</groupId>
  <artifactId>jfio</artifactId>
  <version>${revision}</version>

  <name>Jfio</name>
  <url>https://github.com/pcmanus/jfio</url>

  <description>Simple library for file I/O through linux io_uring</description>
  <scm child.scm.connection.inherit.append.path="false"
      child.scm.developerConnection.inherit.append.path="false"
      child.scm.url.inherit.append.path="false">
    <connection>scm:git:git://github.com/pcmanus/jfio.git</connection>
    <developerConnection>scm:git:git@github.com:pcmanus/jfio.git</developerConnection>
    <url>http://github.com/pcmanus/jfio/tree/main/</url>
  </scm>
  <issueManagement>
    <system>github</system>
    <url>http://github.com/pcmanus/jfio/issues</url>
  </issueManagement>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Sylvain Lebresne</name>
      <email>lebresne@gmail.com</email>
      <organization>Jfio</organization>
      <organizationUrl>https://github.com/pcmanus/jfio</organizationUrl>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <revision>0.1.0-SNAPSHOT</revision>
  </properties>

  <build>
    <extensions>
      <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>1.7.1</version>
      </extension>
    </extensions>

    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>20</source>
          <target>20</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.5.0</version>
        <configuration>
          <flattenMode>ossrh</flattenMode>
          <pomElements>
            <dependencies>resolve</dependencies>
          </pomElements>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <classifier>${os.detected.classifier}</classifier>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>linux</family>
        </os>
      </activation>
      <properties>
        <native.make>make</native.make>
        <native.compiler>gcc</native.compiler>
        <native.linker>ld</native.linker>

        <native.name>libjfio</native.name>
        <native.source.directory>${project.basedir}/src/main/c</native.source.directory>
        <native.build.directory>${project.build.directory}/native-lib</native.build.directory>
        <native.lib.directory>${project.basedir}/src/main/resources/native-lib</native.lib.directory>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.3.2</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>${native.lib.directory}</directory>
                </fileset>
              </filesets>
            </configuration>
          </plugin>

          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.1</version>
            <configuration>
              <argLine>
                --enable-preview
                --enable-native-access=ALL-UNNAMED
                -Djava.library.path=${native.lib.directory}
              </argLine>
            </configuration>
          </plugin>

          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>build-native-lib</id>
                <phase>generate-sources</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>${native.make}</executable>
                  <environmentVariables>
                    <CC>${native.compiler}</CC>
                    <LINKER>${native.linker}</LINKER>
                    <SRC_DIR>${native.source.directory}</SRC_DIR>
                    <LIB_DIR>${native.lib.directory}</LIB_DIR>
                    <OBJ_DIR>${native.build.directory}</OBJ_DIR>
                    <CFLAGS>-O3 -D_GNU_SOURCE -luring -march=native -Werror -Wno-attributes -fPIC -fno-omit-frame-pointer -Wunused-variable</CFLAGS>
                    <LDFLAGS>-shared -luring</LDFLAGS>
                    <LIB_NAME>${native.name}</LIB_NAME>
                    <LIB_EXT>so</LIB_EXT>
                  </environmentVariables>
                </configuration>
              </execution>
            </executions>
          </plugin>

        </plugins>
      </build>
    </profile>

  </profiles>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.21.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.21.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>1.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
